# hletterscriptgen

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-POLICY.md  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  schema_change.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  downstream_handoff.md  letter_set_v1.md  repository_scope.md  roadmap.md  upstream_integration.md
docs/design/: letter_extraction.md  segmentation-approach.md  writer_attribution.md
examples/letter_set/: writer_example.json
src/hletterscriptgen/: __init__.py  __main__.py  attribution.py  cli.py  hashing.py  upstream.py  validation.py
src/hletterscriptgen/schemas/: letter_set.schema.json
tests/: test_attribution.py  test_cli.py  test_hashing.py  test_schema.py  test_upstream.py  test_validation.py
tests/fixtures/attribution/: writer_profile.json
tests/fixtures/upstream/: entries.jsonl  entries_all_eligible.jsonl
