[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hletterscriptgen"
version = "0.1.0.dev0"
description = "Generates per-writer Hebrew letter-glyph image sets from public-domain handwritten Hebrew scans for the HeOCR project."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "HeOCR" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "jsonschema[format-nongpl]>=4",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5",
]
lint = [
  "ruff>=0.5",
]
typecheck = [
  "mypy>=1.10",
]
dev = [
  "hletterscriptgen[test,lint,typecheck]",
]

[project.urls]
Homepage = "https://github.com/HeOCR/hletterscriptgen"
Issues = "https://github.com/HeOCR/hletterscriptgen/issues"

[project.scripts]
hletterscriptgen = "hletterscriptgen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hletterscriptgen = [
  "schemas/*.json",
  "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=hletterscriptgen --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle + pyflakes
  "I",               # isort
  "B",               # flake8-bugbear
  "UP",              # pyupgrade
  "RUF",             # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code"]

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true
